--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">按键</span>
                         </div>
-                        <input type="text" id="keyboard" class="form-control" maxlength=4 placeholder="默认为DFJK">
+                        <input type="text" id="keyboard" class="form-control" maxlength=4
+                            placeholder="电脑默认 D F J K 对应四个轨道">
                     </div>
                     <button type="button" class="btn btn-secondary btn-lg"
                         onclick="show_btn();save_cookie();">完成</button>
